# magic-mirror

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
app/: main.py
app/core/: config.py  logging.py
app/db/: models.py
docs/: PLAN.md  SETUP.md  pipecat-cloud.md
