[project]
name = "magic-mirror"
version = "0.1.0"
description = "Configuration sync service for snowwhiteai."
requires-python = ">=3.11, <3.12"

[tool.poetry.dependencies]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0", python = ">=3.9,<4.0"}
gunicorn = "^21.2.0"
sqlmodel = {version = "^0.0.16", python = ">=3.9,<4.0"}
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.3"}
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
structlog = "^24.1.0"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
